<resources>
    <string name="app_name">MitChatChit</string>

<!--    authentication-->
    <string name="tv_login_title">Login</string>
    <string name="tv_email">EMAIL</string>
    <string name="tv_password">PASSWORD</string>
    <string name="tv_forgot_password">Forgot password?</string>
    <string name="tv_register_full">Don\'t have account? Register now</string>
    <string name="tv_register_now">Register now</string>
    <string name="tv_register_title">Register</string>
    <string name="tv_username">USERNAME</string>
    <string name="tv_policies_and_terms">I agree with policies and terms</string>
    <string name="tv_policies">policies</string>
    <string name="tv_terms">terms</string>
    <string name="btn_register">REGISTER</string>
    <string name="tv_login_full">Already have account? Login now</string>
    <string name="tv_login_now">Login now</string>
<!--    exception-->
    <string name="error_user_not_found">Email is not registered</string>
    <string name="error_wrong_password">Password is incorrect</string>
    <string name="error_email_or_password_is_empty">Email or password is empty</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_login_failed">Login failed</string>
    <string name="do_not_leave_this_field_blank">Do not leave this field blank</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="sign_up_success">Sign up successfully</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="error_sign_up_failed">Sign up failed</string>
    <string name="tv_home_title">Message</string>
    <string name="message_bottom_bar">Message</string>
    <string name="friend_bottom_bar">Friend</string>
    <string name="profile_bottom_bar">Profile</string>
    <string name="text_create_new_message">Create New Message</string>
    <string name="tv_cancel">Cancel</string>
    <string name="tv_friend_list">Friend list</string>


    <!--    Splash-->

</resources>