<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.screen.authentication.RegisterFragment">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_size_24dp"
                android:layout_marginTop="@dimen/common_size_64dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_size_24dp"
                android:layout_marginTop="@dimen/common_size_48"
                android:text="@string/tv_register_title"
                android:textColor="@color/primary_color_light"
                android:textSize="@dimen/tv_login_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_back" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_size_24dp"
                android:layout_marginTop="@dimen/common_size_40dp"
                android:text="@string/tv_username"
                android:textColor="@color/tv_edit_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_username"
                style="@style/authEditText"
                android:layout_marginHorizontal="@dimen/common_size_24dp"
                android:drawableEnd="@drawable/ic_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_size_24dp"
                android:layout_marginTop="@dimen/common_size_40dp"
                android:text="@string/tv_email"
                android:textColor="@color/tv_edit_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_username" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/authEditText"
                android:layout_marginHorizontal="@dimen/common_size_24dp"
                android:drawableEnd="@drawable/ic_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_size_24dp"
                android:layout_marginTop="@dimen/common_size_40dp"
                android:text="@string/tv_password"
                android:textColor="@color/tv_edit_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/authEditText"
                android:layout_marginHorizontal="@dimen/common_size_24dp"
                android:drawableEnd="@drawable/ic_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password" />

            <CheckBox
                android:id="@+id/cb_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_size_24dp"
                android:layout_marginTop="@dimen/common_size_30dp"
                android:button="@drawable/bg_check_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <TextView
                android:id="@+id/tv_policy_and_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_size_10dp"
                android:layout_marginTop="@dimen/common_size_30dp"
                android:text="@string/tv_policies_and_terms"
                android:textColor="@color/tv_edit_text_title"
                app:layout_constraintStart_toEndOf="@+id/cb_agree"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_size_24dp"
                android:layout_marginTop="@dimen/common_size_24dp"
                android:background="@drawable/bg_login_button"
                android:text="@string/btn_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_policy_and_terms" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_full"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
                app:layout_constraintVertical_bias="0.788" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>
