<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.screen.authentication.LoginFragment">

            <ImageView
                android:id="@+id/ic_plane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_size_24dp"
                android:layout_marginTop="@dimen/common_size_81dp"
                android:src="@drawable/ic_plane_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginHorizontal"
                android:text="@string/tv_login_title"
                android:textColor="@color/primary_color_light"
                android:textSize="@dimen/tv_login_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_plane" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginHorizontal"
                android:layout_marginTop="@dimen/common_size_48"
                android:text="@string/tv_email"
                android:textColor="@color/tv_edit_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_email"
                style="@style/authEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                android:layout_marginHorizontal="@dimen/common_size_24dp"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_email"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginHorizontal"
                android:layout_marginTop="@dimen/common_size_40dp"
                android:text="@string/tv_password"
                android:textColor="@color/tv_edit_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_password"
                style="@style/authEditText"
                android:layout_marginHorizontal="@dimen/common_size_24dp"
                android:drawableEnd="@drawable/ic_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_forgot_password"
                android:textStyle="bold"
                android:textColor="@color/primary_color_light"
                android:layout_marginEnd="@dimen/marginHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_login_button"
                android:text="@string/tv_login_title"
                android:textSize="@dimen/tv_login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_register_full"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintVertical_bias="0.788" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
